fixed icon spacing in About

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -247,7 +247,7 @@ img {
     display: flex;
     flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 20px;
 }
 #history-interests{
